[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[project]
name = "primetools"
version = "0.0.1.post1"
author = "valkyrie_pilot"
author_email = "valk@randomairborne.dev"
description = "Prime number tools written in rust."
# there is not a good way to load it f
long_description = """
# primetools
## a prime number toolset for python, written in rust/PyO3
```py
import primetools
print(primetools.get_primes_to(100))
```
More functionality coming soon (tm)
"""
long_description_content_type = "text/markdown"
url = "https://github.com/randomairborne/primetools"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust"
]