[metadata]
name = primetools
version = 0.0.1
author = valkyrie_pilot
author_email = valk@randomairborne.dev
description = Prime number tools written in rust.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/randomairborne/primetools
project_urls =
Bug Tracker = https://github.com/randomairborne/primetools/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Development Status :: 2 - Pre-Alpha
Operating System :: Microsoft :: Windows
Operating System :: MacOS :: MacOS X
Operating System :: POSIX :: Linux
Programming Language :: Rust

[options]
python_requires = >=3.6